syntax = "proto3";
package CARTA;

import "enums.proto";

//
// Utility definitions and sub-messages for the Control package
//

message Point {
    float x = 1;
    float y = 2;
}

// File info message structure (internal use only)
message FileInfo {
    string name = 1;
    FileType type = 2;
    sfixed64 size = 3;
    repeated string HDU_list = 4;
}

message FileInfoExtended {
    // Number of dimensions of the image file
    sfixed32 dimensions = 1;
    // Width of the XY plane
    sfixed32 width = 2;
    // Height of the XY plane
    sfixed32 height = 3;
    // Number of channels
    sfixed32 depth = 4;
    // Number of Stokes parameters
    sfixed32 stokes = 5;
    // List of Stokes parameters contained in the file (if applicable). For files that do not explicitly specify Stokes files, this will be blank.
    repeated string stokes_vals = 6;
    // Header entries from header string or attributes
    repeated HeaderEntry header_entries = 7;
}

message HeaderEntry {
    string name = 1;
    string value = 2;
    EntryType entry_type = 3;
    double numeric_value = 4;
}

message DoubleBounds {
    double min = 1;
    double max = 2;
}

message ImageBounds {
    sfixed32 x_min = 1;
    sfixed32 x_max = 2;
    sfixed32 y_min = 3;
    sfixed32 y_max = 4;
}

message AnimationFrame {
    sfixed32 channel = 1;
    sfixed32 stokes = 2;
}

message SpatialProfile {
    sfixed32 start = 1;
    sfixed32 end = 2;
    repeated float values = 3;
    string coordinate = 4;
}

message SpectralProfile {
    string coordinate = 1;
    StatsType stats_type = 2;
    repeated float vals = 3;
}

message StatisticsValue {
    StatsType stats_type = 1;
    float value = 2;
}

message Histogram {
    sfixed32 channel = 1;
    sfixed32 num_bins = 2;
    double bin_width = 3;
    double first_bin_center = 4;
    repeated sfixed32 bins = 5;
}

message ContourSet {
    float value = 1;
    repeated float coordinates = 2;
    repeated sfixed32 start_indices = 3;
}